# django-cassandra-engine

./: .editorconfig  .flake8  .gitignore  .isort.cfg  .travis.yml  404.html  CHANGELOG.rst  Dockerfile  LICENSE.txt  README.md  README.rst  docker-compose.yml  genrst.py  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml  test.sh  tox.ini
.github/: FUNDING.yml
.github/workflows/: tox.yml
changelog/: index.html
django_cassandra_engine/: __init__.py  apps.py  base.py  compat.py  connection.py  constants.py  creation.py  django_compat_models.py  django_field.py  django_field_methods.py  django_model_methods.py  models.py  schema.py  serializers.py  test.py  utils.py
django_cassandra_engine/auth/: __init__.py  decorators.py  forms.py  middleware.py  models.py  urls.py  views.py
django_cassandra_engine/base/: __init__.py  client.py  creation.py  features.py  introspection.py  operations.py  schema.py  validation.py  wrapper.py
django_cassandra_engine/management/commands/: flush.py  makemigrations.py  migrate.py  runserver.py  sync_cassandra.py  syncdb.py
django_cassandra_engine/models/: __init__.py  constants.py  django_field_methods.py  django_model_methods.py
django_cassandra_engine/rest/: serializers.py
django_cassandra_engine/sessions/: models.py
django_cassandra_engine/sessions/backends/: cached_db.py  db.py
docs/: changelog.md  faq.md  index.md  license.md
docs/guide/: advanced_usage.md  contributing.md  getting_started.md  installation.md  management_commands.md  sessions.md  tests.md
faq/: index.html
flatly_custom/: base.html
flatly_custom/css/: base.css
guide/advanced_usage/: index.html
guide/contributing/: index.html
guide/getting_started/: index.html
guide/installation/: index.html
guide/management_commands/: index.html
guide/sessions/: index.html
guide/tests/: index.html
license/: index.html
mkdocs/: search_index.json
search/: search_index.json
testproject/: manage.py  runtests.py  urls.py  wsgi.py
testproject/app/: models.py  views.py
testproject/app/tests/: test_commands.py  test_connection.py  test_databasewrapper.py  test_models.py
testproject/common/: forms.py  models.py  serializers.py  test_utils.py  urls.py  views.py
testproject/common/tests/: test_django_cassandra_models.py  test_drf.py  test_forms.py  test_querysets.py  test_views.py
testproject/model_meta/: README.md  models.py  results.py
testproject/model_meta/tests/: test_django_compat_models.py  test_legacy.py  test_manager.py  tests.py
testproject/model_meta_dj110/: results.py
testproject/multiapp/: models.py
testproject/multiapp/tests/: test_models.py
testproject/sessionsapp/tests/: test_sessions.py
testproject/settings/: base.py  default_cassandra.py  default_only_cassandra.py  metadata_disabled.py  multi_cassandra.py  nose_cassandra.py  secondary_cassandra.py
testproject/testproject/: settings.py
testproject/testproject/app/: models.py
testproject/testproject/app/tests/: test_commands.py  test_connection.py  test_databasewrapper.py  test_models.py
testproject/testproject/multiapp/: models.py
testproject/testproject/multiapp/tests/: test_models.py
testproject/testproject/settings/: base.py  default_cassandra.py  default_only_cassandra.py  multi_cassandra.py  secondary_cassandra.py
tests/: __init__.py
travis/: setup_cassandra.sh
